2016-06-19  Release 1.31.0

  * Overriding metric target and low targets via the targets and low_targets parameters is no longer supported.
    Use the metric_options parameter introduced in release 1.30.0.


2016-06-18  Release 1.30.0

  * Allow for overriding metric targets and low targets via the metric options, e.g.
    Product(..., metric_options={metric.MajorViolations: dict(target=10, low_target=5)})


2016-06-18  Release 1.29.0

  * Comments via a Wiki are no longer supported. Use the project definition for comments. See release 1.28.0 below.


2016-06-17  Release 1.28.1

  * Bug fix: Don't crash when opening a Sonar url throws a socket error.


2016-06-15  Release 1.28.0

  * Allow for adding comments to metrics in the project definition, e.g.
    Product(..., metric_options={metric.UnmergedBranches: dict(comment="This is a comment")})


2016-06-15  Release 1.27.3

  * Bug fix: Center the icons in the help information.


2016-06-15  Release 1.27.2

  * Bug fix: Center the icons in the help information.


2016-06-15  Release 1.27.1

  * Bug fix: Use the correct icons in the help information.


2016-06-15  Release 1.27.0

  * In the help information, show which of the metrics are actually included in the current report.


2016-06-14  Release 1.26.2

  * Bug fix: Don't crash when there's no Sonar analysis of the trunk version of a product.


2016-06-14  Release 1.26.1

  * Bug fix: Adding technical debt to metric.ARTStability would cause an exception.


2016-06-12  Release 1.26.0

  * Add --version command line argument.


2016-06-11  Release 1.25.1

  * Bug fix: Birt reports use commas as thousands separators. Remove commas before converting strings to integers.


2016-06-11  Release 1.25.0

  * Include user stories and logical test case metrics in the report for products that have user stories and logical
    test cases as requirement: Product(..., requirements=[requirement.USER_STORIES_AND_LTCS]). This will add