@@ -52,20 +52,19 @@ QUALITY_REPORT_UNITTESTS = \
 QUALITY_REPORT = \
     Product(PROJECT, 'QR',
             unittests=QUALITY_REPORT_UNITTESTS,
-            technical_debt_targets={
-                metric.UnittestLineCoverage:
-                    TechnicalDebtTarget(0, 'Sonar incorrectly reports 0% unit test coverage', '%'),
-                metric.MajorViolations:
-                    DynamicTechnicalDebtTarget(47, datetime.datetime(2014, 2, 12),
-                                               25, datetime.datetime(2014, 6, 1),
-                                               unit='major violations')},
             metric_source_ids={
                 SONAR: 'nl.ictu.quality-report:quality-report',
                 JACOCO: 'quality-report-coverage-report',
                 SUBVERSION: 'http://svn/commons/scripts/quality-report/'},
             metric_options={
-                metric.UnmergedBranches: dict(branches_to_ignore='spike',
-                                              comment="Ignore the spike branch (2016-06-15).")},
+                metric.UnittestLineCoverage:
+                    dict(debt_target=TechnicalDebtTarget(0, 'Sonar incorrectly reports 0% unit test coverage', '%')),
+                metric.MajorViolations:
+                    dict(debt_target=DynamicTechnicalDebtTarget(47, datetime.datetime(2014, 2, 12),
+                                                                25, datetime.datetime(2014, 6, 1),
+                                                                unit='major violations')),
+                metric.UnmergedBranches:
+                    dict(branches_to_ignore='spike', comment="Ignore the spike branch (2016-06-15).")},
             product_branches={'auto-discovery-branch': {SUBVERSION: 'auto-discovery', SONAR: 'auto_discovery'}})
 
 PROJECT.add_product(QUALITY_REPORT)
